# alphalens

./: .gitignore  README.md  portfolio_tags.json  pyproject.toml
.claude/: launch.json
alphalens/: __init__.py  performance.py  plotting.py  tears.py  utils.py
backend/: config.py  main.py  requirements.txt  schemas.py
backend/api/: data_platform.py  dividend_index.py  hk_tech.py  investment_agent.py  portfolio.py  us_tech.py
backend/data/: akshare_client.py  cache.py  futu_client.py  hk_client.py  us_client.py
backend/data_platform/: __init__.py  models.py  providers.py  service.py
backend/portfolio/: db.py  fx.py  schemas.py  seed.py  service.py  tags.py  targets.py
backend/portfolio/sources/: futu.py  quotes.py  screenshot.py
backend/strategy/: hk_signals.py  llm.py  us_signals.py
docs/: data-platform-openapi.md
examples/: quickstart.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agent/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/components/: ActionPill.tsx  BenchmarkSelector.tsx  ChartCard.tsx  ConstituentsTable.tsx  IndexSelector.tsx  MatrixNotes.tsx  OverviewCards.tsx  PriceChart.tsx  SignalBoard.tsx  StatsBar.tsx  TimeRangePicker.tsx  TopNav.tsx  ValuationChart.tsx  YearlyBreakdownTable.tsx  YieldSpreadChart.tsx
frontend/src/components/hktech/: HKAddStockInput.tsx  HKFlowsPanel.tsx  HKIndexOverview.tsx  HKMarketPanel.tsx  (+3 more)
frontend/src/lib/: api.ts
tests/: test_data_platform.py  test_performance.py  test_utils.py
(+8 files in other folders)
